[modify] get notice parmeter